--- a/debian/changelog
+++ b/debian/changelog
@@ -2,4 +2,4 @@ python-dbus-next (0.2.3-0) unstable; urgency=medium
 
   * Initial release.
 
- -- Sebastien Laclau <seb.laclau@gmail.com>  Thu, 27 Apr 2023 00:30:00
+ -- Sebastien Laclau <seb.laclau@gmail.com>  Thu, 27 Apr 2023 00:30:00 +0100
