--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+python-dbus-next (0.2.3-1) jammy; urgency=medium
+
+  * Update build depends.
+
+ -- Sebastien Laclau <seb.laclau@gmail.com>  Thu, 27 Apr 2023 08:45:00 +0100
+ 
 python-dbus-next (0.2.3-0) jammy; urgency=medium
 
   * Initial release.
